crates/oxc_css_parser/tests/error/scss/value/calc/dollar.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: unknown token
  ┌─ dollar.scss:1:12
  │
1 │ a {b: calc($)}
  │            ^


